realizo correcciones: comprimi imagenes de eventos, animacion en nav, texto del footer

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav w-100 justify-content-around">
+                <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+                    <div class="navbar-nav w-100 justify-content-around header__item">
                     <a class="text-light" href="index.html">HOME</a>
                     <a class="text-light" href="pages/tienda.html">TIENDA</a>
                     <a class="text-light" href="pages/eventos.html">EVENTOS</a>
@@ -79,15 +79,15 @@
         <section class="footer__gral">
                 <div class="footer__titulonosotros">
                     <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-                <p class="info__nosotros">Berón de Astrada 670, Ramos Mejía, Buenos Aires <br>
-                011 4460-4460 <br>
-                info@speed-unlimited.com.ar
-                </p>
+                    <ul class="info__nosotros">
+                        <li>Berón de Astrada 670, Ramos Mejía, Buenos Aires</li>
+                        <li>011 4460-4460 </li>
+                        <li>info@speed-unlimited.com.ar</li>
+                    </ul>
                 </div>
                 <section class="ayuda">
                     <div class="footer__tituloayuda">
                         <h3 class="footer__titulo--ayuda" >Ayuda</h3>
-                    
                         <ul class="footer__titulo--preguntas">
                             <li class="footer__preguntas"><a href="#" target="_blank">Preguntas frecuentes</a></li>
                             <li class="footer__preguntas"><a href="#" target="_blank">Trabaja con nosotros</a></li>
