--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ms-auto">
+                    <div class="navbar-nav ms-auto header__item">
                     <a class="text-light" href="../index.html">HOME</a>
                     <a class="text-light" href="../pages/tienda.html">TIENDA</a>
                     <a class="text-light" href="#">EVENTOS</a>
@@ -42,15 +42,6 @@
                 </div>
                 </div>
             </nav>
-        <!-- <nav class="header__nav--pag">
-            <ul class="header__nav--paglis">
-                <li class="header__item--pag"><a href="../index.html">HOME</a></li>
-                <li class="header__item--pag"><a href="tienda.html">TIENDA</a></li>
-                <li class="header__item--pag"><a href="#">EVENTOS</a></li>
-                <li class="header__item--pag"><a href="nosotros.html">NOSOTROS</a></li>
-                <li class="header__item--pag"><a href="speed-app.html">SPEED APP</a></li>
-            </ul>
-        </nav> -->
     </section>
     </header>
     <main>
@@ -70,10 +61,11 @@
         <section class="footer__gral">
                 <div class="footer__titulonosotros">
                     <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-                <p class="info__nosotros">Berón de Astrada 670, Ramos Mejía, Buenos Aires <br>
-                011 4460-4460 <br>
-                info@speed-unlimited.com.ar
-                </p>
+                    <ul class="info__nosotros">
+                        <li>Berón de Astrada 670, Ramos Mejía, Buenos Aires</li>
+                        <li>011 4460-4460 </li>
+                        <li>info@speed-unlimited.com.ar</li>
+                    </ul>
                 </div>
                 <section class="ayuda">
                     <div class="footer__tituloayuda">
