--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,8 +30,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ms-auto">
+                <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto header__item">
                     <a class="text-light" href="../index.html">HOME</a>
                     <a class="text-light" href="../pages/tienda.html">TIENDA</a>
                     <a class="text-light" href="../pages/eventos.html">EVENTOS</a>
@@ -93,12 +93,10 @@
             <article class="titulo__marcas">
                 <h2>Nuestras marcas</h2>
             </article>
-            <!-- <section class="fotos__marca"> -->
                 <div class="speed__marca"></div>
                 <div class="hodlmoser__marca"></div>
                 <div class="rena__marca"></div>
                 <div class="block__marca"></div>
-            <!-- </section> -->
             <div class="none1"></div>
             <div class="none2"></div>
     </section>
@@ -107,10 +105,11 @@
         <section class="footer__gral">
                 <div class="footer__titulonosotros">
                     <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-                <p class="info__nosotros">Berón de Astrada 670, Ramos Mejía, Buenos Aires <br>
-                011 4460-4460 <br>
-                info@speed-unlimited.com.ar
-                </p>
+                    <ul class="info__nosotros">
+                        <li>Berón de Astrada 670, Ramos Mejía, Buenos Aires</li>
+                        <li>011 4460-4460 </li>
+                        <li>info@speed-unlimited.com.ar</li>
+                    </ul>
                 </div>
                 <section class="ayuda">
                     <div class="footer__tituloayuda">
