--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -31,7 +31,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse header__item" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
         <a class="text-light" href="../index.html">HOME</a>
         <a class="text-light" href="#">TIENDA</a>
@@ -126,10 +126,11 @@
         <section class="footer__gral">
                 <div class="footer__titulonosotros">
                     <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-                <p class="info__nosotros">Berón de Astrada 670, Ramos Mejía, Buenos Aires <br>
-                011 4460-4460 <br>
-                info@speed-unlimited.com.ar
-                </p>
+                    <ul class="info__nosotros">
+                        <li>Berón de Astrada 670, Ramos Mejía, Buenos Aires</li>
+                        <li>011 4460-4460 </li>
+                        <li>info@speed-unlimited.com.ar</li>
+                    </ul>
                 </div>
                 <section class="ayuda">
                     <div class="footer__tituloayuda">
