--- a/pages/speed-app.html
+++ b/pages/speed-app.html
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ms-auto">
+                    <div class="navbar-nav ms-auto header__item">
                     <a class="text-light" href="../index.html">HOME</a>
                     <a class="text-light" href="../pages/tienda.html">TIENDA</a>
                     <a class="text-light" href="../pages/eventos.html">EVENTOS</a>
@@ -68,10 +68,11 @@
         <section class="footer__gral">
                 <div class="footer__titulonosotros">
                     <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-                <p class="info__nosotros">Berón de Astrada 670, Ramos Mejía, Buenos Aires <br>
-                011 4460-4460 <br>
-                info@speed-unlimited.com.ar
-                </p>
+                    <ul class="info__nosotros">
+                        <li>Berón de Astrada 670, Ramos Mejía, Buenos Aires</li>
+                        <li>011 4460-4460 </li>
+                        <li>info@speed-unlimited.com.ar</li>
+                    </ul>
                 </div>
                 <section class="ayuda">
                     <div class="footer__tituloayuda">
